Fix questions list margin and reword front page a little

--- a/layouts/questions/list.html
+++ b/layouts/questions/list.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 <main>
   <h1>Answers to questions I'll soon forget</h1>
-  <div class="notice">
+  <div class="notice" style="margin-bottom: 1rem;">
     <h3>Looking for the notes section?</h3>
     <p>This area used to be called <code>notes</code> and the wishy washy nature of it reflected that</p>
     <p>I realised that the best elements of it were when I would ask a question and then go and answer it so I've decided to make this a collection of FAQs to myself</p>
