--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,9 +5,9 @@
     <div class="notice" style="margin-bottom: 1rem;">
       <h3>Please excuse the mess!</h3>
       <p>I’ve just rolled out a decently sizable rewrite of my site so some things may still be a little messy.</p>
-      <p>The bulk of it has rolled out but in an attempt to get the bulk of it out the door, I’ve decided to eject a little early.</p>
-      <p>Realistically, I think it should be perfectly fine but if you do notice anything a little wonky, feel free to reach out to me at <a href="mailto:wonkiness@utf9k.net?subject=I%20noticed%20something%20a%20little%20off">wonkiness@utf9k.net</a></p>
-      <p>For those interested, I’m maintaining a list so I don’t forget <a href="/todo/">here</a></p>
+      <p>The bulk of it has rolled in an attempt to get something out the door but of course, that means I possibly hit the eject button a little early.</p>
+      <p>Realistically, I think it should be perfectly fine but if you do notice anything a little wonky, feel free to reach out to me at <a href="mailto:wonkiness@utf9k.net?subject=I%20noticed%20something%20a%20little%20off">wonkiness@utf9k.net.</a></p>
+      <p>For those interested, I’m maintaining a list so I don’t forget <a href="/todo/">here</a>.</p>
     </div>
     <p>My name is <a href="/about">Marcus Crane</a> and you’re currently logged on to my personal website.</p>
     <p>I maintain a <a href="/blog">blog</a> and also keep a running lists of <a href="/questions">questions</a> regarding topics I often want to remember things about for later.</p>
