--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,6 +93,7 @@ article {
 }
 
 article #post-body {
+  height: 100%; /* Ensure Safari uses as much space as it needs, similar to other browsers */
   margin-top: 2rem;
 }
 
