Fix up accessibility issues (surely there are more)

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,7 +2,7 @@
   <div class="breadcrumbs">
     <a href="/">
       <span class="favicon">
-        <img src="/favicon.png" />
+        <img src="/favicon.png" alt="The utf9k logo which is a cartoon robot" />
       </span>
       <sup class="sitename">utf9k</sup>
     </a>
@@ -30,7 +30,7 @@
   <div class="links">
     <sup>
       <a href="/index.xml">
-        <img class="rss" src="/icons/rss-28x28.png" />
+        <img class="rss" src="/icons/rss-28x28.png" alt="An icon symbolising an RSS feed" />
       </a>
     </sup>
   </div>
