--- a/layouts/404.html
+++ b/layouts/404.html
@@ -7,7 +7,7 @@
       <p>Sorry folks but it seems that URL is not a valid page?</p>
       <p>Perhaps you'd like to go back <a href="/">to the beginning?</a></p>
       <p>Alternatively, check this out:</p>
-      <iframe style="width: 100%; height: 100%; display: block;" src="https://www.youtube.com/embed/C7xyoPqYkYM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe title="Capybara fun" style="width: 100%; height: 100%; display: block;" src="https://www.youtube.com/embed/C7xyoPqYkYM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 </article>
 {{ end }}
