--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,8 @@
 {{ define "main" }}
 <article>
-  <header><h1></h1></header>
+  <header>
+    <h1>{{ .Title }}</h1>
+  </header>
   <div id="post-body">
     <div class="notice" style="margin-bottom: 1rem;">
       <h3>Please excuse the mess!</h3>
