--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -214,21 +214,28 @@ main, article {
   grid-auto-rows: auto;
 }
 
+main *, article * {
+  grid-column: 3 / span 1;
+}
+
 @media screen and (max-width: 1000px) {
   main, article {
-    grid-template-columns: 1fr 5em 600px 5em 1fr;
+    grid-template-columns: 15% 1fr 15%;
+  }
+  
+  main *, article * {
+    grid-column: 2 / span 1;
   }
 }
 
 @media screen and (max-width: 600px) {
   main, article {
-    display: block;
-    padding: 2rem;
+    grid-template-columns: 5% 1fr 5%;
   }
-}
-
-main *, article * {
-  grid-column: 3 / span 1;
+  
+  main *, article * {
+    grid-column: 2 / span 1;
+  }
 }
 
 /***
