--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -7,5 +7,7 @@
 <body>
   {{ partial "header.html" . }}
   {{ block "main" . }}{{ end }}
+  <script src="/js/littlefoot.js" type="application/javascript"></script>
+  <script type="application/javascript">littlefoot.default()</script>
 </body>
 </html>
