--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -2,7 +2,7 @@
 <article>
   <header>
     <h1>{{ .Title }}</h1>
-    <time datetime="{{ .Date }}">{{ .Date.Format "January 2, 2006" }}</time>
+    <time datetime="{{ .Date }}">{{ .Date.Format "January 2, 2006" }}</time> · Around {{ .ReadingTime }} minute{{ if ne .ReadingTime 1 }}s{{ end }}
   </header>
   <div id="post-body">
     {{ partial "toc.html" . }}
