--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -7,12 +7,14 @@
 <meta name="author" content="Marcus Crane" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
 {{ $styles := resources.Get "css/style.css" | postCSS (dict "config" "./assets/css/postcss.config.js") }}
+{{ $littleFoot := resources.Get "css/littlefoot.css" | postCSS (dict "config" "./assets/css/postcss.config.js") }}
 
 {{ if .Site.IsServer }}
 <link rel="stylesheet" href="{{ $styles.RelPermalink }}" />
+<link rel="stylesheet" href="{{ $littleFoot.RelPermalink }}" />
 {{ else }}
 {{ $minStyles := $styles | minify | fingerprint | resources.PostProcess }}
-<link rel="stylesheet" href="{{ $styles.RelPermalink }}" integrity="{{ $styles.Data.Integrity }}" />
+{{ $minLittleFoot := $littleFoot | minify | fingerprint | resources.PostProcess }}
+<link rel="stylesheet" href="{{ $minStyles.RelPermalink }}" integrity="{{ $minStyles.Data.Integrity }}" />
+<link rel="stylesheet" href="{{ $minLittleFoot.RelPermalink }}" integrity="{{ $minLittleFoot.Data.Integrity }}" />
 {{ end }}
-
-<link rel="stylesheet" href="/css/littlefoot.css" />
