--- a/layouts/404.html
+++ b/layouts/404.html
@@ -7,7 +7,9 @@
       <p>Sorry folks but it seems that URL is not a valid page?</p>
       <p>Perhaps you'd like to go back <a href="/">to the beginning?</a></p>
       <p>Alternatively, check this out:</p>
-      <iframe title="Capybara fun" style="width: 100%; height: 100%; display: block;" src="https://www.youtube.com/embed/C7xyoPqYkYM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	  <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+		<iframe src="https://www.youtube.com/embed/C7xyoPqYkYM" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="Capybara fun"></iframe>
+	  </div>
     </div>
 </article>
 {{ end }}
