--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -6,6 +6,8 @@
 <meta name="theme-color" content="#a463f2" />
 <meta name="author" content="Marcus Crane" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
+{{ template "_internal/opengraph.html" . }}
+{{ template "_internal/twitter_cards.html" . }}
 {{ $styles := resources.Get "css/style.css" | postCSS (dict "config" "./assets/css/postcss.config.js") }}
 {{ $littleFoot := resources.Get "css/littlefoot.css" | postCSS (dict "config" "./assets/css/postcss.config.js") }}
 
