--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -9,6 +9,8 @@
 <link rel="me" href="mailto:hello@utf9k.net" />
 <link rel="me" href="https://twitter.com/sentreh" />
 <link rel="me" href="https://github.com/marcus-crane" />
+<link rel="webmention" href="https://webmention.io/utf9k.net/webmention" />
+<link rel="pingback" href="https://webmention.io/utf9k.net/xmlrpc" />
 {{ template "_internal/opengraph.html" . }}
 {{ template "_internal/twitter_cards.html" . }}
 {{ $styles := resources.Get "css/style.css" | postCSS (dict "config" "./assets/css/postcss.config.js") }}
