Switch RSS icon for text

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -20,11 +20,9 @@
       {{ end }}
     {{ end }}
   </div>
-  <div class="links">
-    <sup>
-      <a href="/index.xml">
-        <img class="rss" src="/icons/rss-28x28.png" alt="An icon symbolising an RSS feed" />
-      </a>
-    </sup>
+  <div class="links breadcrumbs">
+    <a href="/index.xml">
+      <sup class="sitename">rss</sup>
+    </a>
   </div>
 </div>
