Change index pages to use trailing slashes

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,10 +4,10 @@
     <h1>{{ .Title }}</h1>
   </header>
   <div id="post-body">
-    <p>My name is <a href="/about">Marcus Crane</a> and you’re currently logged on to my personal website.</p>
-    <p>I maintain a <a href="/blog">blog</a> and also keep a running lists of <a href="/questions">questions</a> regarding topics I often want to remember things about for later.</p>
-    <p>If you want to know what I’m up to, or realistically what I was up to like two weeks ago, there’s a <a href="/now">page</a> for that.</p>
-    <p>Finally, if you have any questions or just want to drop a comment, you can pick your poison over on my <a href="/contact">contact</a> page.</p>
+    <p>My name is <a href="/about/">Marcus Crane</a> and you’re currently logged on to my personal website.</p>
+    <p>I maintain a <a href="/blog/">blog</a> and also keep a running lists of <a href="/questions/">questions</a> regarding topics I often want to remember things about for later.</p>
+    <p>If you want to know what I’m up to, or realistically what I was up to like two weeks ago, there’s a <a href="/now/">page</a> for that.</p>
+    <p>Finally, if you have any questions or just want to drop a comment, you can pick your poison over on my <a href="/contact/">contact</a> page.</p>
   </div>
 </article>
 {{ end }}
