--- a/layouts/questions/list.html
+++ b/layouts/questions/list.html
@@ -9,7 +9,7 @@
     <p>If there were some you wanted to read through, you can find them <a href="https://github.com/marcus-crane/utf9k/tree/74d0bbb2078ed0b02b200461c4b84da5747bf88d/content/notes">on Github.</a></p>
   </div>
   <ul>
-    {{ range .Pages }}
+    {{ range sort .Pages "Title" "asc" }}
     <li>
       <a href="{{ .RelPermalink }}">{{ .Title }}</a>
     </li>
