--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -6,6 +6,7 @@
 <meta name="theme-color" content="#a463f2" />
 <meta name="author" content="Marcus Crane" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
+<link rel="canonical" href="{{ .Permalink | safeURL }}" />
 <link rel="me" href="mailto:hello@utf9k.net" />
 <link rel="me" href="https://twitter.com/sentreh" />
 <link rel="me" href="https://github.com/marcus-crane" />
