Revamped site layout

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<main>
+<main class="prose lg:prose-xl dark:prose-dark">
   <h1>{{ .Title }}</h1>
   <ul>
     {{ $years := .Scratch }}
