--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -14,15 +14,12 @@
 <link rel="pingback" href="https://webmention.io/utf9k.net/xmlrpc" />
 {{ template "_internal/opengraph.html" . }}
 {{ template "_internal/twitter_cards.html" . }}
-{{ $styles := resources.Get "css/style.css" | postCSS (dict "config" "./assets/css/postcss.config.js") }}
-{{ $littleFoot := resources.Get "css/littlefoot.css" | postCSS (dict "config" "./assets/css/postcss.config.js") }}
+
+{{ $styles := resources.Get "css/style.css" | postCSS }}
 
 {{ if .Site.IsServer }}
-<link rel="stylesheet" href="{{ $littleFoot.RelPermalink }}" />
-<link rel="stylesheet" href="{{ $styles.RelPermalink }}" />
+  <link rel="stylesheet" href="{{ $styles.RelPermalink }}" />
 {{ else }}
-{{ $minStyles := $styles | minify | fingerprint | resources.PostProcess }}
-{{ $minLittleFoot := $littleFoot | minify | fingerprint | resources.PostProcess }}
-<link rel="stylesheet" href="{{ $minLittleFoot.RelPermalink }}" integrity="{{ $minLittleFoot.Data.Integrity }}" />
-<link rel="stylesheet" href="{{ $minStyles.RelPermalink }}" integrity="{{ $minStyles.Data.Integrity }}" />
+  {{ $styles := $styles | minify | fingerprint | resources.PostProcess }}
+  <link rel="stylesheet" href="{{ $styles.RelPermalink }}" integrity="{{ $styles.Data.Integrity }}" />
 {{ end }}
