--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,10 +1,6 @@
 {{ define "main" }}
-<article>
-  <header>
-    <h1>{{ .Title }}</h1>
-  </header>
-  <div id="post-body">
-    {{ .Content }}
-  </div>
+<article class="prose lg:prose-xl dark:prose-dark">
+  <h1>{{ .Title }}</h1>
+  {{ .Content }}
 </article>
 {{ end }}
