Add titles to svgs in footer

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,9 +1,9 @@
 {{ define "main" }}
-<article>
+<article class="prose lg:prose-xl dark:prose-dark">
     <header>
         <h1>404 Not Found</h1>
     </header>
-    <div id="post-body">
+    <div>
       <p>Sorry folks but it seems that URL is not a valid page?</p>
       <p>Perhaps you'd like to go back <a href="/">to the beginning?</a></p>
       <p>Alternatively, check this out:</p>
