Remove item centering for header

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,5 @@
 <header class="text-gray-600 dark:text-gray-400 dark:text-white body-font">
-  <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
+  <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row">
     <a class="flex title-font font-medium items-center text-gray-900 dark:text-gray-200 mb-4 md:mb=0" href="/">
       <img src="/favicon.png" alt="The utf9k logo which is a cartoon robot" />
       <span class="ml-3 text-xl">utf9k</span>
