Fix broken reference to live status bar

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -25,6 +25,7 @@
         const liveSentence = document.querySelector("#livesentence")
         const contentName = document.querySelector('#contentname')
         const contentSource = document.querySelector('#contentsource')
+        const liveStatusBar = document.querySelector(".prose header h1 #statusbar")
         const verb = document.querySelector('#verb')
 
         const seasonNumber = data['episode']['season']
