--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <footer class="text-gray-600 body-font">
   <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
-     <p class="text-sm text-gray-500 dark:text-gray-400 sm:mt-0 mt-4">Has anyone seen my keys? I dropped them in here somewhere...</p>
+    <p class="text-sm text-gray-500 dark:text-gray-400 sm:mt-0 mt-4">{{ range $.Site.Data.gags.lines | shuffle | first 1 }}{{ . }}{{ end }}</p>
     <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
       <a class="ml-3 text-gray-500 dark:text-gray-400" href="mailto:hello@utf9k.net">
         <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="at" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="w-5 h-5">
