Move index css inside index page and add block for custom CSS

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -2,16 +2,13 @@
 <html lang="en">
 <head>
   {{ partial "head.html" . }}
+  {{ block "style" . }}{{ end }}
   {{ block "json+ld" . }}{{ end }}
 </head>
 <body class="bg-gray-100 text-gray-900 dark:bg-gray-900 dark:text-gray-100">
   {{ partial "header.html" . }}
   <div class="container px-5 py-8 mx-auto ">{{ block "main" . }}{{ end }}</div>
   {{ partial "footer.html" . }}
-  {{ $defines := dict "process.env.NODE_ENV" `"production"` }}
-  {{ $opts := dict "targetPath" "main.js" "defines" $defines }}
-  {{ $built := resources.Get "js/main.js" | js.Build $opts }}
-  <script type="text/javascript" src="{{ $built.RelPermalink }}" defer></script>
   {{ block "script" . }}{{ end }}
 </body>
 </html>
