--- a/layouts/index.html
+++ b/layouts/index.html
@@ -17,4 +17,9 @@
 {{ end }}
 
 {{ define "script" }}
+  {{ $targetPath := "js/main.js" }}
+  {{ $defines := dict "process.env.NODE_ENV" `"production"` }}
+  {{ $opts := dict "targetPath" $targetPath "defines" $defines }}
+  {{ $built := resources.Get $targetPath | js.Build $opts }}
+  <script type="text/javascript" src="{{ $built.RelPermalink }}" defer></script>
 {{ end }}
