--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -6,9 +6,11 @@
   {{ block "json+ld" . }}{{ end }}
 </head>
 <body class="bg-gray-100 text-gray-900 dark:bg-gray-900 dark:text-gray-100">
+  {{ block "body" . }}
   {{ partial "header.html" . }}
   <div class="container px-5 py-8 mx-auto ">{{ block "main" . }}{{ end }}</div>
   {{ partial "footer.html" . }}
+  {{ end }}
   {{ block "script" . }}{{ end }}
 </body>
 </html>
