--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -6,7 +6,7 @@
 <meta name="theme-color" content="#a463f2" />
 <meta name="author" content="Marcus Crane" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
-<meta name="description" content="Is this thing even on? I just put some text here to test out link previews. There's real site content though, I swear!"/>
+<meta name="description" content="{{ with .Description }}{{ . }}{{ else }}{{if .IsPage}}{{ .Summary }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}{{ end -}}" />
 <link rel="canonical" href="{{ .Permalink | safeURL }}" />
 <link rel="me" href="mailto:hello@utf9k.net" />
 <link rel="me" href="https://twitter.com/sentreh" />
