--- a/layouts/shortcodes/library.html
+++ b/layouts/shortcodes/library.html
@@ -5,7 +5,7 @@
     <img class="flex-none w-18 h-18 rounded-lg object-cover bg-gray-100" src="{{ .cover }}" width="72" height="72" />
     <div class="min-w-0 relative flex-auto sm:pr-20 lg:pr-0 xl:pr-20">
       <h2 class="text-base sm:text-lg lg:text-base xl:text-lg font-semibold text-black mb-0.5 truncate">{{ .title }}</h2>
-      <dl class="flex flex-wrap text-sm font-medium whitespace-pre">
+      <dl class="flex flex-wrap text-sm font-medium">
         <div class="absolute top-0 right-0 rounded-full bg-amber-50 text-amber-900 px-2 py-0.5 hidden sm:flex lg:hidden xl:flex items-center space-x-1">
           <dt class="text-amber-500">
             <span class="sr-only">Rating</span>
